[gd_scene load_steps=6 format=3 uid="uid://baldsdn4t18gn"]

[ext_resource type="Script" path="res://scenes/players/player.gd" id="1_n6nme"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g64hs"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_au2fj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_sn4g6"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_e8i26"]
radius = 1.0

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_n6nme")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_g64hs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_au2fj")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.06029)
collision_layer = 16
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.466678)
shape = SubResource("SphereShape3D_sn4g6")

[node name="Tank" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tank"]
shape = SubResource("SphereShape3D_e8i26")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.475369, -1.85897)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 45

[node name="Capacity" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/Capacity"]
layout_mode = 2
text = "Capacity: "

[node name="Value" type="Label" parent="CanvasLayer/Control/MarginContainer/Capacity"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 50

[node name="FPS" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer2/FPS"]
layout_mode = 2
text = "FPS:"

[node name="Value" type="Label" parent="CanvasLayer/Control/MarginContainer2/FPS"]
layout_mode = 2

[node name="Camera3D" type="Camera3D" parent="."]
cull_mask = 1

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Tank" to="." method="_on_tank_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
